# fb

./: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  build.sh  demo.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
