[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
redis = { version = "0.24", features = ["tokio-comp"] }