[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
uuid = { workspace = true }
sauron = "0.61.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers"
] }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"